added email reporting

--- a/resources/email_reports_template.html
+++ b/resources/email_reports_template.html
@@ -1,32 +1,14 @@
 <html>
-
-<head>
-    <style>
-        .container {
-            width: 50%;
-            margin: 0;
-            padding: 0;
-            background-color:aqua;
-            border: 1px solid #000;
-        }
-
-        .row {
-            width: 100%;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-</head>
-
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Test Report</h1>
-                <p>{{ $body }}</p>
-            </div>
-        </div>
-    </div>
-</body>
+<p><b>Start Time: <span style="color:blue">{}</span></b></p>
+<p><b>End Time: <span style="color:blue">{}</span></b></p>
+<p><b>Time Elapsed: <span style="color:blue">{}</span></b></p>
+<p><b><i><span style="background-color:yellow;">Note:</span><span style="background-color:yellow;"> JSON debug file is attached below.</span></i></b>
+</p>
+{}
+<br><br>
+<h4>Regards,</h4>
+<p><b><i>Test Automation Team</i></b></p>
 
+</body>
 </html>
